@@ -131,7 +131,7 @@ class Config
         std::list<string> lastfileseen;
         bool          sessionSeen[TOPLEVEL::XML::MLearn + 1];
         bool          historyLock[TOPLEVEL::XML::MLearn + 1];
-        int           checksynthengines;
+        bool          checksynthengines;
         int           xmlType;
         unsigned char instrumentFormat;
         int           EnableProgChange;
